# AgentCoT

./: .gitignore  README.md  pyproject.toml
assets/tiny-local-model/: config.json  generation_config.json  tokenizer.json
configs/: data.yaml  eval.yaml  model.example.yaml  model.yaml  train.yaml
configs/research/: ablation_plan.yaml  experiment_matrix.yaml  phased_rollout.yaml  post_network_research_checklist.yaml
data/: train.jsonl
docs/: top_conference_strategy.md
scripts/: eval.sh  export_research_plan.sh  train.sh
src/agentcot/: __init__.py
src/agentcot/cli/: __init__.py  common.py  eval.py  research_plan.py  train.py
src/agentcot/data/: __init__.py  cache.py  dataset.py  splitter.py
src/agentcot/eval/: __init__.py  metrics.py
src/agentcot/fairness/: __init__.py  metrics.py  regularization.py  reweighting.py
src/agentcot/models/: __init__.py  loader.py
src/agentcot/planning/: __init__.py  loader.py
src/agentcot/trainer/: __init__.py  loop.py
tests/: test_autotune.py  test_data.py  test_fairness.py  test_model_loader.py  test_planning.py
